Fraction Matcher: Added 3x3 grid back
Build a Fraction: Put the shape cards directly on the shape container icons
# 0.00.102 (65571) Jun 29, 2012
Fraction Matcher: Removed 3x3 grid pattern
Build a Fraction: Added "refresh" button to the number scene
Build a Fraction: Wired up the "refresh" button
# 0.00.101 (65565) Jun 29, 2012
Changed the scale factors for mixed fractions level 7 and 8
# 0.00.100 (65562) Jun 29, 2012
Fraction Matcher: Fixed a bug that caused the "new game" button on the right to malfunction sometimes, especially when holding the button down for more than a second
# 0.00.99 (65559) Jun 29, 2012
Fraction Matcher: Made entire bounds of fraction number grabbable, not just directly over the number themselves
Fraction Matcher: Moved the mixed numbers a bit lower in the pan
Fraction Matcher: On the mixed number tab, always use a scale factor for level 7 and 8
Fraction Matcher: On the mixed number tab, show mixed numbers only (never show improper fractions)
Build a Fraction: Added a "refresh" button, not wired up
# 0.00.98 (65549) Jun 28, 2012
Build a Fraction: Improved adding/removing multiple containers
Fraction Matcher: Refactored StartScreen into a separate class, see #3357
Build a Fraction: Added outline to pieces and added gray cutout line for container divisions
Build a Fraction: Fixed: Split button was broken
Build a Fraction: Allow pieces to move to any container within a group
Build a Fraction: Made it so you cannot overflow a single piece
Build a Fraction: Made it so you cannot overflow a single piece
Build a Fraction: Removed "world selection screen" and merged shapes/numbers level selection screens
Build a Fraction: Put the up/down arrows beneath the container and make them adjacent
Fraction Matcher: Require the user to change their answer before pressing "check answer" again, see #3357 comment 21